Fixed contact error when hit schedule.
Fixed scroll bars appearing when sidebar gets cut off on cell selection

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -37,7 +37,7 @@ input[type="number"]::-webkit-outer-spin-button {
 }
 
 body {
-  @apply font-Inter;
+  @apply font-Inter overflow-x-hidden overflow-y-hidden;
 }
 
 .card {
